# capstone-streamlit

./: .gitignore  app.py  extract_data.py  requirements.txt
.devcontainer/: devcontainer.json
capstone-streamlit/: pyproject.toml
capstone-streamlit/src/: ADSK_predictions_LNN.csv  EBAY_predictions_LNN.csv  WDAY_predictions_LNN.csv  app.py  requirements.txt
capstone-streamlit/src/pages/: 1_Relevance_based_prediction.py  2_Liquid_neural_networks.py
capstone-streamlit/src/relevance_based_prediction/Jupyter_notebooks/: rbp_analysis.ipynb
capstone-streamlit/src/relevance_based_prediction/analysis/: iv_error_stats_by_industry.xlsx  outlier_statistical_analysis.py
capstone-streamlit/src/relevance_based_prediction/analysis/services/: iv_error_stats_by_industry.xlsx
capstone-streamlit/src/relevance_based_prediction/analysis/services_multiple_outliers/: iv_error_stats_by_industry.xlsx
capstone-streamlit/src/relevance_based_prediction/data/: NASDAQ_Daily_Metrics_INTC.csv  filtered_INTC_data.csv  intel_price.csv
capstone-streamlit/src/relevance_based_prediction/data/macro/: compile_data.py  histimpl.xls  macro.csv
capstone-streamlit/src/relevance_based_prediction/data/macro/FRED/: CSUSHPINSA.csv  DJIA.csv  GS10.csv  M2SL.csv  NASDAQ100.csv  NASDAQCOM.csv  PSAVERT.csv  VIXCLS.csv  VXDCLS.csv  WALCL.csv
capstone-streamlit/src/streamlit_scripts/: black_scholes.py  evaluate_rbp.py
pages/: 2_Liquid_neural_networks.py
relevance_based_prediction/: RelevanceBasedPrediction.py  db_query.py  evaluate_rbp.py
streamlit_scripts/: __init__.py  evaluate_rbp.py
