[project]
name = "capstone-streamlit"
version = "0.1.0"
description = ""
authors = [
    {name = "Chan, Wei Jian Ivan",email = "ivan_chan@mymail.sutd.edu.sg"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "protobuf (>=4.21.0,<5.0.0)",
    "tensorflow (==2.19.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "clickhouse-connect (>=0.8.16,<0.9.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "arch (>=7.2.0,<8.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "streamlit-echarts (>=0.4.0,<0.5.0)",
    "streamlit-plotly-events (>=0.0.6,<0.0.7)",
    "plotly (>=6.0.1,<7.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
]

[tool.poetry]
packages = [{include = "capstone_streamlit", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

